FullQa New/src/objects/Compliance_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Compliance Variance Items</relationshipLabel>
        <relationshipName>Compliance_Variance_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AvaTaxAccountIdNew__c</fullName>
        <label>AvaTaxAccountIdNew</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvaTax_Account_ID__c</fullName>
        <label>AvaTax Account ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collect_Amount_Multi__c</fullName>
        <formula>&quot;$&quot; &amp; CASE(LEN(TEXT(Collect_Amount__c)),
1, TEXT(Collect_Amount__c),
2, TEXT(Collect_Amount__c),
3, TEXT(Collect_Amount__c),
4, LEFT(TEXT(Collect_Amount__c), 1) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Collect_Amount__c), 3),
5, LEFT(TEXT(Collect_Amount__c), 2) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Collect_Amount__c), 3),
6, LEFT(TEXT(Collect_Amount__c), 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Collect_Amount__c), 3),
7, LEFT(TEXT(Collect_Amount__c), 1) &amp; &quot;,&quot; &amp; MID(TEXT(Collect_Amount__c), 2,3) &amp; &quot; &quot; &amp; RIGHT(TEXT(Collect_Amount__c), 3),
8, LEFT(TEXT(Collect_Amount__c), 2) &amp; &quot;,&quot; &amp; MID(TEXT(Collect_Amount__c), 3,3) &amp; &quot; &quot; &amp; RIGHT(TEXT(Collect_Amount__c), 3),
9, LEFT(TEXT(Collect_Amount__c), 3) &amp; &quot;,&quot; &amp; MID(TEXT(Collect_Amount__c), 4,3) &amp; &quot; &quot; &amp; RIGHT(TEXT(Collect_Amount__c), 3),
10, LEFT(TEXT(Collect_Amount__c), 1) &amp; &quot;,&quot; &amp; MID(TEXT(Collect_Amount__c), 2,3) &amp; &quot; &quot; &amp; MID(TEXT(Collect_Amount__c), 5, 3) &amp; &quot; &quot; &amp; RIGHT(TEXT(Collect_Amount__c), 3),
11, LEFT(TEXT(Collect_Amount__c), 2) &amp; &quot;,&quot; &amp; MID(TEXT(Collect_Amount__c), 3,3) &amp; &quot; &quot; &amp; MID(TEXT(Collect_Amount__c), 6, 3) &amp; &quot; &quot; &amp; RIGHT(TEXT(Collect_Amount__c), 3),
12, LEFT(TEXT(Collect_Amount__c), 3) &amp; &quot;,&quot; &amp; MID(TEXT(Collect_Amount__c), 4,3) &amp; &quot; &quot; &amp; MID(TEXT(Collect_Amount__c), 7, 3) &amp; &quot; &quot; &amp; RIGHT(TEXT(Collect_Amount__c), 3),
null)
 &amp; &quot; (&quot; &amp;  TEXT(CurrencyIsoCode) &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collect Amount Multi</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collect_Amount__c</fullName>
        <label>Collect Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_ID__c</fullName>
        <label>Company ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Variance</fullName>
                </value>
                <value>
                    <fullName>Late Wire</fullName>
                </value>
                <value>
                    <fullName>ACH Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH Pull</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Reason__c</fullName>
        <label>Return Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Compliance Variance Item</label>
    <nameField>
        <displayFormat>cvi{0000}</displayFormat>
        <label>Compliance Variance Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Variance Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>